--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ header {
   position: absolute;
   top: 75%;
   left: 50%;
-  translate: (-50%, 0);
+  transform: translate(-50%, 0);
 }
 
 .servicio-descripcion {
